# SociometryClustering

./: KUISONER SOSIOMETERI VII A EDIT PRA TESIS.csv  Proposal tesis.pptx  aClass.ipynb  aPraClass.ipynb  cClass.ipynb  count  count json  eClass.ipynb  gClass.ipynb  kerangka berfikir tesis.docx  name_changer.ipynb  processed_data.csv  pyproject.toml
dataset/: Social Science A.csv  Social Science B.csv  Social Science C.csv  Social Science D.csv  Social Science E.csv  Social Science F.csv  Social Science G.csv  Social Science H.csv  Social Science I.csv  Social Science J.csv
new_ds/: KUISONER SOSIOMETERI VII A.csv  KUISONER SOSIOMETERI VII E.csv  KUISONER SOSIOMETERI VII F.csv  df_to_csv.ipynb  output-1.json  output-2.json  rt.csv
new_processing/: Processed Data A.csv  Processed Data B.csv  Processed Data C.csv  Processed Data D.csv  Processed Data G.csv  Processed Data H.csv  Processed Data I.csv  Processed Data J.csv
sociometryclustering/: Processed Data A.csv  Processed Data B.csv  Processed Data C.csv  Processed Data D.csv  Processed Data E.csv  Processed Data F.csv  Processed Data G.csv  Processed Data H.csv  Processed Data I.csv  Processed Data J.csv
v1/: dClass.ipynb  eClass.ipynb  fClass.ipynb  gClass.ipynb  hClass.ipynb  iClass.ipynb  jClass.ipynb
v2/: aClass.ipynb  bClass.ipynb  dClass.ipynb  fClass.ipynb  hClass.ipynb  iClass.ipynb  jClass.ipynb
v3_processing/: Processed Data A.csv
