[tool.poetry]
name = "sociometryclustering"
version = "0.1.0"
description = ""
authors = ["Michkail <michkail@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
seaborn = "^0.12.2"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
pyspark = "^3.4.1"
jupyter = "^1.0.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
